--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jtransfo</groupId>
+			<artifactId>jtransfo-core</artifactId>
+			<version>2.8</version>
+		</dependency>
 
 	</dependencies>
 
